[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/gui/botones/boton_Verde.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/botones/boton_lechuga.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/botones/boton_rojo.png" type="Texture" id=3]
[ext_resource path="res://assets/inicio/mar_barco.png" type="Texture" id=4]
[ext_resource path="res://Fuentes/cheri/CHERI___.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Fuentes/cheri/CHERL___.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://assets/inicio/caja.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/botones/boton_amarillo.png" type="Texture" id=8]
[ext_resource path="res://Inicio/Control.gd" type="Script" id=10]
[ext_resource path="res://assets/usergame/font_music/logo.wav" type="AudioStream" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0.0156863, 0.0313726, 0.215686, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[node name="Node" type="Node"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="NinePatchRect" parent="Control"]
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 601.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="Control"]
margin_left = 146.43
margin_top = 500.255
margin_right = 1045.43
margin_bottom = 579.255
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0431373, 0.0470588, 0.309804, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 0
custom_constants/shadow_as_outline = 0
text = "JUANCITO Y SUS PROBLEMAS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 197.799, 279.243 )
rotation = -0.0428633
scale = Vector2( 0.917592, 1.44409 )
texture = ExtResource( 7 )

[node name="jugar" type="TextureButton" parent="Control"]
margin_left = 106.0
margin_top = 163.0
margin_right = 526.0
margin_bottom = 337.0
rect_scale = Vector2( 0.4, 0.3 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/jugar"]
margin_left = -4.99998
margin_top = 10.0
margin_right = 38.0
margin_bottom = 29.0
rect_scale = Vector2( 9, 9 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.101961, 0.584314, 0.278431, 1 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial" type="TextureButton" parent="Control"]
margin_left = 104.0
margin_top = 245.0
margin_right = 526.0
margin_bottom = 425.0
rect_scale = Vector2( 0.4, 0.3 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Control/tutorial"]
margin_left = 15.0
margin_top = 23.6667
margin_right = 80.0
margin_bottom = 42.6667
rect_scale = Vector2( 6, 8 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.0392157, 0.298039, 0.337255, 1 )
text = "TUTORIAL"

[node name="salir" type="TextureButton" parent="Control"]
margin_left = 108.0
margin_top = 334.0
margin_right = 528.0
margin_bottom = 508.0
rect_scale = Vector2( 0.4, 0.3 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/salir"]
margin_left = 52.5
margin_top = 23.3333
margin_right = 89.5
margin_bottom = 42.3333
rect_scale = Vector2( 8, 8 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0.239216, 0.0235294, 0.0235294, 1 )
text = "SALIR"

[node name="AudioImtro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 2.0
autoplay = true
[connection signal="pressed" from="Control/jugar" to="Control" method="_on_jugar_pressed"]
[connection signal="pressed" from="Control/tutorial" to="Control" method="_on_tutorial_pressed"]
[connection signal="pressed" from="Control/salir" to="Control" method="_on_salir_pressed"]
